# ai_group_chat

./: .env.example  .gitignore  README.md  debug_stats.py  docker-compose.yml  main.py  pyproject.toml  start.sh
config/: models.yaml
scripts/: backfill_memory_embeddings.py  test_compression.py
src/ai_group_chat/: __init__.py  config.py  main.py
src/ai_group_chat/agents/: __init__.py  config.py  group_chat.py
src/ai_group_chat/api/: routes.py
src/ai_group_chat/dao/: __init__.py  base.py  context_snapshot_dao.py  database.py  group_dao.py  long_term_memory_dao.py  member_dao.py  message_dao.py
src/ai_group_chat/llm/: __init__.py  client.py
src/ai_group_chat/memory/: __init__.py  classifier.py  compressor.py  context_manager.py  embedding_service.py  long_term_memory_service.py  memory_extractor.py  memory_gateway.py  summarizer.py  value_scorer.py
src/ai_group_chat/models/: __init__.py  schemas.py
src/ai_group_chat/prompts/: __init__.py  context_prompts.py  group_chat_prompts.py  memory_prompts.py
src/ai_group_chat/services/: __init__.py  chat_repository.py  chat_service.py  database.py  presets.py
src/ai_group_chat/tools/: __init__.py  memory_tools.py  termination_tools.py  toolkit.py
test-ui/: app.js  index.html  style.css
